<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/mobile_navigation"
app:startDestination="@+id/nav_about_company">

<fragment
    android:id="@+id/personal_area"
    android:name="com.example.lawagency.ui.aboutcompany.AboutCompanyFragment"
    android:label="@string/menu_about_company"
    tools:layout="@layout/fragment_about_company" />

<fragment
    android:id="@+id/nav_appointment"
    android:name="com.example.lawagency.ui.make_an_appointment.AppointmentFragment"
    android:label="@string/menu_make_an_appointment"
    tools:layout="@layout/fragment_appointment" />

<fragment
    android:id="@+id/nav_question"
    android:name="com.example.lawagency.ui.ask_question.QuestionFragment"
    android:label="@string/menu_question"
    tools:layout="@layout/fragment_question" />

<fragment
    android:id="@+id/nav_price"
    android:name="com.example.lawagency.ui.price.PriceFragment"
    android:label="@string/menu_price"
    tools:layout="@layout/fragment_price" />

<fragment
    android:id="@+id/nav_route"
    android:name="com.example.lawagency.ui.route.RouteFragment"
    android:label="@string/menu_route"
    tools:layout="@layout/fragment_route" />

<fragment
    android:id="@+id/nav_about_company"
    android:name="com.example.lawagency.ui.aboutcompany.AboutCompanyFragment"
    android:label="@string/menu_about_company"
    tools:layout="@layout/fragment_about_company" />

<fragment
    android:id="@+id/nav_share"
    android:name="com.example.lawagency.ui.share.ShareFragment"
    android:label="@string/menu_share"
    tools:layout="@layout/fragment_share" />

<fragment
    android:id="@+id/nav_send"
    android:name="com.example.lawagency.ui.send.SendFragment"
    android:label="@string/menu_send"
    tools:layout="@layout/fragment_send" />
</navigation>