<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_services">

    <fragment
        android:id="@+id/nav_specialists"
        android:name="com.example.lawagency.ui.specialists.SpecialistsFragment"
        android:label="@string/menu_specialists"
        tools:layout="@layout/fragment_specialists" />

    <fragment
        android:id="@+id/nav_services"
        android:name="com.example.lawagency.ui.services.ServicesFragment"
        android:label="Services"
        tools:layout="@layout/fragment_services" />

    <fragment
        android:id="@+id/nav_share_admin"
        android:name="com.example.lawagency.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send_admin"
        android:name="com.example.lawagency.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>